1998-06-13  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* proto/cf/aliases.cf:
	    Removing "sender" parameters from alias processing
	    cases.  Copying them from other codes was a mistake
	    with subtle results.
	
	* proto/newaliases.in:
	    Parameter parsing error; didn't honour '-s' option.

1998-06-12  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* smtpserver/smtpserver.c, smtpserver/smtpserver.h,
	  smtpserver/smtpcmds.c:
	    Reviewed, and changed quite many of the ENHANCEDSTATUSCODES
	    code values presented in replies.  Not all DNS errors are
	    POLICY (*.7.*) errors although policy analysis detects them..

1998-06-11  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* proto/makedb.in:
	    Altered the parameter pickup routines to be more generic
	    in view of what *sh shells support: while true; do .. break .. done

	* transports/mailbox/mailbox.c:
	    Mistakes after code movements in  program()  function :-(

	* smtpserver/smtpdata.c, smtpserver/smtpserver.c,
	  smtpserver/smtpcmds.c, utils/smtpserver-log-parser.pl:
	    Make the verbose debug log more readable -- guaranteed
	    session end-points to be findable:
	       ######w \t 221 ...
	       ######- \t ...

	* smtpserver/smtpcmds.c:
	    Change ETRN reply texts a bit; don't anymore speak of TURNME..

1998-06-09  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* proto/cf/aliases.cf, proto/cf/fqdnaliases.cf, proto/cf/p-usenet.cf,
	  proto/cf/rrouter.cf, proto/cf/standard.cf,
	  proto/db/aliases.zmsh.example:
	    Major reorganisation of scripts;
	    - All things that have something to do with local users
	      are clustered into aliases.cf. (Away from  standard.cf,
	      and from  rrouter.cf)
	    - A new calling arguments for  routeuser (aliases.cf,
	      and rrouter.cf)
	    - Smart "+plustail" processing into fqdnaliases.cf
	    - Hooks in between p-usenet.cf, and aliases.cf to handle
	      'newsgroup' database.
	    With these the system can handle usernames that have